--- a/src/app/temp.html
+++ b/src/app/temp.html
@@ -14,7 +14,7 @@
       </a>
   </div>
   <div>
-    <h1>Welcome to Angular Basic Project</h1>
+    <h1>Angular Basic Project</h1>
     {{router.url}}
   </div>
   
