--- a/src/app/home/card/card.component.scss
+++ b/src/app/home/card/card.component.scss
@@ -2,7 +2,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 10px;
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: #5f2af1;
     width: 200px;
     margin: auto;
     margin-bottom: 10px;
